[package]
name = "bean-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
nom = "7.1.3"
tokio = { version = "1.28.1", features = ["io-util", "net", "rt", "rt-multi-thread"] }
thiserror = "1.0"

[dev-dependencies]
const_format = "0.2.30"

